# shrimpai-pipeline

./: .gitignore  LICENSE  README.md  pyproject.toml  shrimpai_pipeline_blacktophat.ipynb
notebooks/blacktophat/: shrimpai_pipeline_blacktophat.ipynb
notebooks/simple-hsv/: shrimpai_pipeline_simple-hsv.ipynb
