[project]
name = "shrimpai-pipeline"
version = "]"
description = ""
authors = [
    {name = "Cristiano Oliveira Lopes",email = "cristiano.oliveira.lopes05@aluno.ifce.edu.br"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
